--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -25,6 +25,19 @@
     }
 
     .quantity{
-        padding-left: 20px;
+        display: flex;
+        // padding-left: 20px;
+
+        .arrow{
+            cursor: pointer;
+        }
+
+        .value{
+            margin: 0 10px;
+        }
+    }
+
+    .remove-button{
+        cursor: pointer;
     }
 }
